Solaris-X64 build fails with compact hashtable

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • None
    • b21
    • x86_64
    • solaris

      Undefined first referenced
       symbol in file
      __type_0 read_value_from_compact_hashtable<const ArchivedKlassSubGraphInfoRecord*>(unsigned char*,unsigned) /work/shared/mirrors/src_clones/jdk/jdk_baseline/build/solaris-x86_64-normal-server-release/hotspot/variant-server/libjvm/objs/heapShared.o
      __type_0 read_value_from_compact_hashtable<Symbol*>(unsigned char*,unsigned) /work/shared/mirrors/src_clones/jdk/jdk_baseline/build/solaris-x86_64-normal-server-release/hotspot/variant-server/libjvm/objs/symbolTable.o
      __type_0 read_value_from_compact_hashtable<const RunTimeSharedClassInfo*>(unsigned char*,unsigned) /work/shared/mirrors/src_clones/jdk/jdk_baseline/build/solaris-x86_64-normal-server-release/hotspot/variant-server/libjvm/objs/systemDictionaryShared.o
      ld: fatal: symbol referencing errors
      lib/CompileJvm.gmk:172: recipe for target '/work/shared/mirrors/src_clones/jdk/jdk_baseline/build/solaris-x86_64-normal-server-release/support/modules_libs/java.base/server/libjvm.so' failed
      make[3]: *** [/work/shared/mirrors/src_clones/jdk/jdk_baseline/build/solaris-x86_64-normal-server-release/support/modules_libs/java.base/server/libjvm.so] Error 1
      make[3]: *** Waiting for unfinished jobs....

            Assignee:
            Ioi Lam
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: