8213948: Solaris-X64 build fails with compact hashtable

Reviewed-by: dcubed, shade